<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.gingergarlic.MainActivity"
    android:background="#FFCDD2">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/mumbai_east"
    android:background="#C62828"
    android:textColor="#FFEBEE"
    android:padding="16dp"
    android:textStyle="bold"
    android:typeface="monospace"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:id="@+id/mumbai_east"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mumbai_west"
        android:background="#F44336"
        android:textColor="#FFEBEE"
        android:padding="16dp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginBottom="8dp"
        android:id="@+id/mumbai_west"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mumbai_central"
        android:background="#C62828"
        android:textColor="#FFEBEE"
        android:padding="16dp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginBottom="8dp"
        android:id="@+id/mumbai_central"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harbour"
        android:background="#F44336"
        android:textColor="#FFEBEE"
        android:padding="16dp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:id="@+id/harbour"/>
</LinearLayout>
