<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.gingergarlic.SplashActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:layout_centerInParent="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splashscreen"
        android:src="@mipmap/ic_launcher_new"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_gingergarlic"
        android:gravity="center"
        android:typeface="serif"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_order"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#FFFFFF"/>
</LinearLayout>
</RelativeLayout>
